syntax = "proto3";
package axelar.multisig.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/multisig/types";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "axelar/multisig/exported/v1beta1/types.proto";
import "axelar/multisig/v1beta1/types.proto";
import "axelar/utils/v1beta1/threshold.proto";

option (gogoproto.goproto_getters_all) = false;

message KeyIDRequest { string chain = 1; }

// KeyIDResponse contains the key ID of the key assigned to a given chain.
message KeyIDResponse {
  string key_id = 1 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];
}

message NextKeyIDRequest { string chain = 1; }

// NextKeyIDResponse contains the key ID for the next rotation on the given
// chain
message NextKeyIDResponse {
  string key_id = 1 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];
}

message KeyRequest {
  string key_id = 1 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];
}

// KeyResponse contains the key corresponding to a given key id.
message KeyResponse {
  message Participant {
    string address = 1;
    bytes weight = 2 [
      (gogoproto.nullable) = false,
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint"
    ];
    string pub_key = 3;
  }

  string key_id = 1 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];
  multisig.exported.v1beta1.KeyState state = 2;
  int64 height = 3;
  google.protobuf.Timestamp timestamp = 4
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
  bytes threshold_weight = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  bytes bonded_weight = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  // Keygen participants in descending order by weight
  repeated Participant participants = 7 [ (gogoproto.nullable) = false ];
}

message KeygenCandidatesRequest {
  string key_id = 1 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];
}

// KeygenCandidatesResponse contains the candidates chosen for a keygen.
message KeygenCandidatesResponse {
  message Participant {
    string address = 1;
    bytes weight = 2 [
      (gogoproto.nullable) = false,
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint"
    ];
  }

  int64 height = 1;
  google.protobuf.Timestamp timestamp = 2
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
  bytes threshold_weight = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  bytes bonded_weight = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  // Keygen candidates in descending order by weight
  repeated Participant participants = 5 [ (gogoproto.nullable) = false ];
}
